<resources>
    <string name="app">OpenConnect Next</string>
    <string name="permission_description">Allows another app to control OpenConnect Next</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="navigate_up">Navigate up</string>
    <string name="navigate_forward">Open settings</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="no_data">No Data</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="securid_info">SecurID info</string>
    <string name="send_feedback">Send feedback</string>
    <string name="report_problem">GitHub Issues</string>
    <string name="feedback_plea">Taking a few seconds to rate an app is very important for the developer.  It allows us to continually improve the experience, and helps other users decide whether an app is right for them. How about telling us what you think?</string>
    <string name="i_love_it">I love it</string>
    <string name="needs_work">Needs work</string>
    <string name="maybe_later">Maybe later</string>
    <string name="help_with_translations">Help with translations</string>
    <string name="about_openconnect">About OpenConnect Next</string>
    <string name="about_title">About</string>
    <string name="about_version">OpenConnect Next v%1$s</string>
    <string name="about_summary">A focused Android client for OpenConnect-compatible SSL VPN servers.</string>
    <string name="about_project_links">Project and support</string>
    <string name="about_project_links_summary">Source code, support, and releases.</string>
    <string name="about_source_code">Source code on GitHub</string>
    <string name="about_github_issues">GitHub Issues</string>
    <string name="about_releases">GitHub Releases</string>
    <string name="about_credits_title">Credits and license</string>
    <string name="about_credits_body">Released under GPLv2. Built on OpenConnect and OpenVPN for Android, with the open-source libraries listed in the project repository.</string>
    <string name="securid_none_defined">Configure SecurID from a VPN profile’s Authentication settings, then import the token supplied by your organization.</string>
    <string name="securid_empty_title">No SecurID token configured</string>
    <string name="securid_open_profiles">Return to VPN profiles</string>
    <string name="securid_parse_error">Unable to parse the SecurID token string in this profile.</string>
    <string name="securid_internal_error">Unable to access the VPN profile. Please open a GitHub Issue from the About page.</string>
    <string name="securid_encrypted">This profile\'s SecurID token string is encrypted. Try re-importing it.</string>
    <string name="copy">Copy</string>
    <string name="next_tokencode">Next tokencode:</string>
    <string name="using_pin">Using PIN:</string>
    <string name="token_sn">Token S/N:</string>
    <string name="exp_date">Expiration date:</string>
    <string name="gmt">Current time (GMT):</string>
    <string name="dev_id">SecurID device ID:</string>
    <string name="enter_pin">Enter PIN:</string>
    <string name="new_pin">New PIN</string>
    <string name="skip">Skip</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="status">Status</string>
    <string name="log">Log</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add VPN profile</string>
    <string name="add_profile_hostname_prompt">Enter the hostname, IP address, or URL:</string>
    <string name="hostname_examples">Valid formats include:\nvpn.example.com (typical usage)\nvpn.example.com:443 (host:port)\nhttps://vpn.example.com/my-group-url</string>
    <string name="disconnect">Disconnect</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_to">Reconnect to %1$s</string>
    <string name="clear_log">Clear log</string>
    <string name="share_log">Share log</string>
    <string name="log_share_subject">OpenConnect Next connection log</string>
    <string name="log_empty_title">No connection log yet</string>
    <string name="log_empty_summary">Connect to a VPN to see connection progress and diagnostic details here.</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="clear">Clear</string>
    <string name="send_logfile">Send log file</string>
    <string name="send">Send</string>
    <string name="enter_problem">ENTER PROBLEM DESCRIPTION HERE:</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. You can help us fix this by sending us error data.</string>
    <string name="crash_dialog_comment_prompt">Please describe what was happening when the problem occurred:</string>
    <string name="problem_dialog_text">Thanks for helping improve OpenConnect. Please use GitHub Issues from the About page for project support and bug reports.</string>
    <string name="problem_dialog_comment_prompt">Describe the problem and include the VPN gateway, Android version, and relevant log lines if you can:</string>
    <string name="bad_rom_text">Unfortunately your Android device does not have proper VpnService support.  If you click OK we will report this to the vendor, but they may or may not fix the bug.</string>
    <string name="bad_rom_comment_prompt">If you have customized your device in any way (rooting, ROM, Xposed) please note the changes below:</string>
    <string name="copied_entry">Copied to clipboard.</string>
    <string name="faq">FAQ</string>
    <string name="expand_answer">Show answer</string>
    <string name="collapse_answer">Hide answer</string>
    <string name="question_abbrev">Q:</string>
    <string name="answer_abbrev">A:</string>
    <string name="file_explorer_tab">File Explorer</string>
    <string name="inline_file_tab">Inline File</string>
    <string name="file_too_large">File is too large</string>
    <string name="error_importing_file">Error importing File</string>
    <string name="import_error_message">Could not import File from filesystem</string>
    <string name="inline_file_data">[[Inline file data]]</string>
    <string name="speed_waiting">Waiting for state message…</string>
    <string name="file_icon">file icon</string>
    <string name="file_access_unavailable">This folder cannot be read. Check storage permission or choose another location.</string>
    <string name="generalsettings">Settings</string>
    <string name="owner_fix_summary">Tries to set the owner of /dev/tun to the \'system\' UID (1000). Some CM9 images need this to make the VPNService API work. Requires root.</string>
    <string name="owner_fix">Fix ownership of /dev/tun</string>
    <string name="edit_profile_title">Edit %s</string>
    <string name="netchange_summary">Reconnect after switching between Wi-Fi and mobile data.</string>
    <string name="netchange">Reconnect on network change</string>
    <string name="netstatus">Network Status:</string>
    <string name="uptime">Uptime:</string>
    <string name="tx">TX:</string>
    <string name="rx">RX:</string>
    <string name="local_ip4">Local IPv4:</string>
    <string name="local_ip6">Local IPv6:</string>
    <string name="local_ip">Local IP:</string>
    <string name="disabled">disabled</string>
    <string name="subnet_mask">Subnet mask:</string>
    <string name="server_name">Server name:</string>
    <string name="select_file">Select</string>
    <string name="advanced">Advanced</string>
    <string name="common_settings">Common settings</string>
    <string name="basic_settings">Basic settings</string>
    <string name="logging_settings">Logging</string>
    <string name="certificates_and_tokens">Certificates and tokens</string>
    <string name="saved_credentials">Saved credentials</string>
    <string name="client_identity">Client identity</string>
    <string name="authentication_settings_summary">Certificates, tokens, and sign-in details</string>
    <string name="advanced_profile_settings_summary">Client identity, split tunneling, and protocol options</string>
    <string name="advanced_general_settings_summary">Logging and compatibility options</string>
    <string name="setting_loadtun_summary">Try to load the tun.ko kernel module before trying to connect. Needs rooted devices.</string>
    <string name="setting_loadtun">Load tun module</string>
    <string name="trace_log_summary">Increase logging verbosity for debugging purposes. This will affect performance.</string>
    <string name="trace_log">Enable TRACE logging</string>
    <string name="add_profile_input_hint">VPN gateway address</string>
    <string name="quick_settings_default_profile">Quick Settings VPN</string>
    <string name="quick_settings_default_profile_summary">Choose what the status bar tile connects to</string>
    <string name="screenoff_summary">Save power, but background connectivity may be interrupted.</string>
    <string name="screenoff_title">Pause when screen is off</string>
    <string name="device_specific">Device compatibility</string>
    <string name="profile_name">Profile name</string>
    <string name="server_address">Server address</string>
    <string name="ca_certificate">CA certificate</string>
    <string name="authentication">Authentication</string>
    <string name="user_certificate">User certificate</string>
    <string name="private_key">Private key</string>
    <string name="software_token">Software token</string>
    <string name="token_string">Token string</string>
    <string name="enter_token_string">Enter token string:</string>
    <string name="token_string_examples_0">Valid formats include:</string>
    <string name="token_string_examples_1" translatable="false">29624-04141-91521-01027-05321-47115-52307-30331-00256-47622-00007-44173-12504-44077-52716-73535-5</string>
    <string name="token_string_examples_2" translatable="false">http://127.0.0.1/securid/ctf?ctfData=213797568467227240150540165305516771132574111177500436764173125710437026671675121</string>
    <string name="token_string_examples_3" translatable="false">com.rsa.securid.iphone://ctf?ctfData=280670666747751343027701722017126407551472632305635574224173125614664606671656613</string>
    <string name="import_from_file">Import from file&#8230;</string>
    <string name="clear_token">Clear token</string>
    <string name="clear_saved_passwords">Clear saved passwords</string>
    <string name="clear_saved_passwords_confirm">Are you sure you want to erase all stored credentials?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="batch_mode">Automatic login</string>
    <string name="new_profile_automatic_login_summary">The first connection still asks for credentials. Choose whether saved fields should be reused on later connections.</string>
    <string name="new_profile_automatic_login_recommended">Use saved credentials when available (recommended)</string>
    <string name="new_profile_automatic_login_ask">Ask every time</string>
    <string name="new_profile_automatic_login_saved_only">Use saved credentials only (advanced)</string>
    <string name="batch_mode_disabled_summary">Always show the VPN server login prompt.</string>
    <string name="timestamp_format">Log timestamp format</string>
    <string name="disable_username_caching">Disable credential caching</string>
    <string name="disable_username_caching_summary">Never cache login names, user groups, or passwords</string>
</resources>