<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:layout="@layout/preference_category_header"
            android:title="@string/logging_settings">
        <ListPreference
                android:defaultValue="short"
                android:dialogTitle="@string/timestamp_format"
                android:entries="@array/log_timestamp_entries"
                android:entryValues="@array/log_timestamp_values"
                android:key="timestamp_format"
                android:layout="@layout/preference_standard_compact"
                android:title="@string/timestamp_format" />
        <SwitchPreference
                android:defaultValue="false"
                android:key="trace_log"
                android:layout="@layout/preference_standard_compact"
                android:summary="@string/trace_log_summary"
                android:title="@string/trace_log"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:layout="@layout/preference_category_header"
            android:title="@string/device_specific">
        <SwitchPreference
                android:defaultValue="false"
                android:key="useCM9Fix"
                android:layout="@layout/preference_standard_compact"
                android:summary="@string/owner_fix_summary"
                android:title="@string/owner_fix"/>
        <SwitchPreference
                android:defaultValue="false"
                android:key="loadTunModule"
                android:layout="@layout/preference_standard_compact"
                android:summary="@string/setting_loadtun_summary"
                android:title="@string/setting_loadtun"/>
    </PreferenceCategory>
</PreferenceScreen>
